<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_arriow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ff_montserrat_alternates_regular"
        android:text="@string/setting"
        android:textColor="@color/tv_blue_text"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_licence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back">

        <ImageView
            android:id="@+id/img_table"
            style="@style/ImageViewStyle"
            android:src="@drawable/ic_tabler_license" />

        <TextView
            android:id="@+id/tv_licence"
            style="@style/TextViewStyle"
            android:fontFamily="@font/ff_montserrat_alternates_regular"
            android:text="@string/licence"
            app:layout_constraintStart_toEndOf="@id/img_table"
            app:layout_constraintTop_toTopOf="@id/img_table" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_privacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_licence">

        <ImageView
            android:id="@+id/img_share_blue"
            style="@style/ImageViewStyle"
            android:src="@drawable/ic_share_blue" />

        <TextView
            android:id="@+id/tv_privacy"
            style="@style/TextViewStyle"
            android:fontFamily="@font/ff_montserrat_alternates_regular"
            android:text="@string/privacy_policy" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rate_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_privacy">

        <ImageView
            android:id="@+id/img_like"
            style="@style/ImageViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/like" />

        <TextView
            android:id="@+id/tv_rate"
            style="@style/TextViewStyle"
            android:fontFamily="@font/ff_montserrat_alternates_regular"
            android:text="@string/rate_us" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_rate_us">

        <ImageView
            android:id="@+id/img_blue"
            style="@style/ImageViewStyle"
            android:src="@drawable/ic_material_share_blue" />

        <TextView
            android:id="@+id/tv_share"
            style="@style/TextViewStyle"
            android:fontFamily="@font/ff_montserrat_alternates_regular"
            android:text="@string/share_it" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_more_apps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_share">

        <ImageView
            android:id="@+id/img_more"
            style="@style/ImageViewStyle"
            android:src="@drawable/ic_more_r" />

        <TextView
            android:id="@+id/tv_more_app"
            style="@style/TextViewStyle"
            android:fontFamily="@font/ff_montserrat_alternates_regular"
            android:text="@string/more_apps" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_play_games"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_more_apps">

        <ImageView
            android:id="@+id/img_gamepad"
            style="@style/ImageViewStyle"
            android:src="@drawable/gamepad" />

        <TextView
            android:id="@+id/btn_play"
            style="@style/TextViewStyle"
            android:fontFamily="@font/ff_montserrat_alternates_regular"
            android:text="@string/play_games" />

    </LinearLayout>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_key"
        ads:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>